--- a/styles.css
+++ b/styles.css
@@ -917,11 +917,11 @@ input:focus {
 @media (max-width: 768px) {
     body {
         background-color: #FFF8F3;
-        background-image: url('cream-pot-mobile.png');
-        background-size: cover;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
+        background-image: url('./cream-pot-mobile.png'), url('./cream-pot.png');
+        background-size: cover, cover;
+        background-position: center center, center center;
+        background-repeat: no-repeat, no-repeat;
+        background-attachment: fixed, fixed;
         overflow: visible;
     }
     
